--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,10 @@ ul {
   cursor: pointer; }
 
 .plus {
-  border-color: #5cd65c; }
+  border-color: #0099ff; }
 
 .delta {
-  border-color: #ea4848; }
+  border-color: #cc0403; }
 
 .desc {
   display: none; }
