--- a/css/main.scss
+++ b/css/main.scss
@@ -18,12 +18,12 @@ ul {
 
 .plus {
 	@extend .comment;
-	border-color: #5cd65c;
+	border-color: #0099ff;
 }
 
 .delta {
 	@extend .comment;
-	border-color: #ea4848;
+	border-color: #cc0403;
 }
 
 .desc {
