--- a/css/main.scss
+++ b/css/main.scss
@@ -1,10 +1,14 @@
+body {
+	background: #f7f7f7;
+}
+
 ul {
 	list-style: none;
 }
 .comment {
 	margin: 10px;
 	padding: 15px;
-	background: #f3f3f3;
+	background: #fdfdfd;
 	border-radius: 5px;
 	border-width: 2px;
 	border-style: solid;
@@ -12,7 +16,7 @@ ul {
 
 }
 .comment:hover {
-	background: #e3e3e3;
+	background: #eaeaea;
 	cursor: pointer;
 }
 
@@ -45,10 +49,12 @@ ul {
 }
 
 .reply {
-	background: #d3d3d3;
+	background: #f7f7f7;
 	margin: 5px;
 	padding: 10px;
 	border-radius: 5px;
 	font-size: 80%;
+	border-width: 1px;
+	border-color: #bbb;
+	border-style: solid;
 }
-
