fix plus/minus button behavior, comment expands/contracts only on clicking the title (not the whole box

--- a/css/main.scss
+++ b/css/main.scss
@@ -30,6 +30,16 @@ ul {
 	border-color: #cc0403;
 }
 
+.readMore {
+	  border-style: solid;
+	  border-color: #cccccc;
+	  border-width: 2px;
+	  width: 2em;
+	  height: 2em;
+	  border-radius:4px;
+	  text-align: center;
+	  padding: .25em;
+}
 .desc {
 	display: none;
 }
