--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 body {
-  background: #f7f7f7;
-}
+  background: #f7f7f7; }
+
+ul {
+  list-style: none; }
 
 .comment, .plus, .delta {
   margin: 10px;
@@ -12,53 +14,37 @@ body {
 
 .comment:hover, .plus:hover, .delta:hover {
   background: #eaeaea;
-  cursor: pointer;
-}
-
-.delta {
-  border-color: #cc0403;
-}
-
-.desc {
-  display: none;
-}
-
-.drop-color {
-  font-weight: bold;
-  color: black;
-}
-
-.name, .shared {
-  height: 3em;
-  margin: 5px;
-  background: #f3f3f3;
-  border-radius: 5px;
-  border-width: 2px;
-  border-style: solid;
-}
-
-.nav-text {
-  margin: .5rem;
-}
-
-.newVideo input {
-  display: inline;
-}
+  cursor: pointer; }
 
 .plus {
-  border-color: #0099ff;
-}
+  border-color: #0099ff; }
+
+.delta {
+  border-color: #cc0403; }
 
 .readMore {
-  float: right;
-}
+  border-style: solid;
+  border-color: #cccccc;
+  border-width: 2px;
+  width: 2em;
+  height: 2em;
+  border-radius: 4px;
+  text-align: center;
+  padding: .25em; }
 
+.desc {
+  display: none; }
+
+.readMore {
+  float: right; }
+
+.newVideo input {
+  display: inline; }
 
 .repl {
   text-decoration: underline;
   font-size: 80%;
-  z-index: 5;
-}
+  z-index: 5; }
 
 .reply {
   background: #f7f7f7;
@@ -68,15 +54,6 @@ body {
   font-size: 80%;
   border-width: 1px;
   border-color: #bbb;
-  border-style: solid;
-}
-
-.top-bar {
-  margin-bottom: 1rem;
-}
-
-ul {
-  list-style: none;
-}
+  border-style: solid; }
 
 /*# sourceMappingURL=main.css.map */
