added skeleton save to make new videos. Videos adding is handled and save to database, callback still needed.

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -21,16 +21,17 @@
 </div>
 
 <!-- Upload New video stuff -->
-<!-- <div class="row">
+<div class="row">
   <div class="newVideo">
     <div class="columns">
       <form class="new-video-text">
+        <input class="new-video-name" type="text" placeholder="Name for Video"/>
         <input class="new-video-text" type="text" placeholder="YouTube URL"/>
         <input class="button" type="submit" value="Submit"/>
       </form>
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="row">
   <div class="columns small-4">
@@ -95,4 +96,3 @@
   </div>
   </div>
 </div>
-
