mongo ids working

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -79,8 +79,9 @@
     <h3>Video</h3>
   	<div class="row">
       <div class="columns">
-      <!--https://www.youtube.com/watch?v=wOmjnioNulo-->
-  	   <iframe id="player" width="560" height="315" src="https://www.youtube.com/embed/EqAlj3XZjjY?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+        <div class="videoholder" id="{{vidid}}">
+    	     <iframe id="player" width="560" height="315" src="{{vidsrc}}" frameborder="0" allowfullscreen></iframe>
+        </div>
        </div>
   	</div>
    <div class="row">
